// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WrapperComponent allows custom layouts 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      class="combobox-wrapper"
    >
      <div
        class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
        id="id_value"
      >
        foo
      </div>
    </div>
    <div
      class="listbox-wrapper"
    >
      <div
        aria-controls="id_listbox"
        aria-expanded="false"
        aria-labelledby="id-label id_value"
        class="react-combo-boxes-dropdown__combobox"
        id="id"
        role="combobox"
        tabindex="0"
      >
        foo
      </div>
    </div>
  </div>
</div>
`;

exports[`options as array of objects disabled sets the aria-disabled attribute 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_value"
    >
      Apple
    </div>
    <div
      aria-activedescendant="id_option_apple"
      aria-controls="id_listbox"
      aria-expanded="true"
      aria-labelledby="id-label id_value"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <ul
      aria-activedescendant="id_option_apple"
      aria-labelledby="id-label"
      class="react-combo-boxes-listbox"
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="react-combo-boxes-listbox__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        aria-disabled="true"
        class="react-combo-boxes-listbox__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
    </ul>
  </div>
</div>
`;

exports[`options as array of objects group renders grouped options 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_value"
    >
      Apple
    </div>
    <div
      aria-controls="id_listbox"
      aria-expanded="false"
      aria-labelledby="id-label id_value"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <ul
      aria-labelledby="id-label"
      class="react-combo-boxes-listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="react-combo-boxes-listbox__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        aria-hidden="true"
        class="react-combo-boxes-listbox__group-label"
      >
        Citrus
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        <div
          class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
        >
          Citrus
        </div>
        Orange
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_lemon"
        role="option"
        tabindex="-1"
      >
        <div
          class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
        >
          Citrus
        </div>
        Lemon
      </li>
      <li
        aria-hidden="true"
        class="react-combo-boxes-listbox__group-label"
      >
        Berry
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_raspberry"
        role="option"
        tabindex="-1"
      >
        <div
          class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
        >
          Berry
        </div>
        Raspberry
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_strawberry"
        role="option"
        tabindex="-1"
      >
        <div
          class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
        >
          Berry
        </div>
        Strawberry
      </li>
    </ul>
  </div>
</div>
`;

exports[`options as array of objects label renders a closed drop down 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_value"
    >
      Apple
    </div>
    <div
      aria-controls="id_listbox"
      aria-expanded="false"
      aria-labelledby="id-label id_value"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <ul
      aria-labelledby="id-label"
      class="react-combo-boxes-listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="react-combo-boxes-listbox__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        Orange
      </li>
    </ul>
  </div>
</div>
`;

exports[`options as array of objects missing label treats as a blank string 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_value"
    >
       
    </div>
    <div
      aria-controls="id_listbox"
      aria-expanded="false"
      aria-labelledby="id-label id_value"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
       
    </div>
    <ul
      aria-labelledby="id-label"
      class="react-combo-boxes-listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="react-combo-boxes-listbox__option"
        id="id_option_undefined"
        role="option"
        tabindex="-1"
      />
    </ul>
  </div>
</div>
`;

exports[`options options as array of numbers renders a closed drop down 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_value"
    >
      0
    </div>
    <div
      aria-controls="id_listbox"
      aria-expanded="false"
      aria-labelledby="id-label id_value"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      0
    </div>
    <ul
      aria-labelledby="id-label"
      class="react-combo-boxes-listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="react-combo-boxes-listbox__option"
        id="id_option_0"
        role="option"
        tabindex="-1"
      >
        0
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_1"
        role="option"
        tabindex="-1"
      >
        1
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_2"
        role="option"
        tabindex="-1"
      >
        2
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_3"
        role="option"
        tabindex="-1"
      >
        3
      </li>
    </ul>
  </div>
</div>
`;

exports[`options options as array of strings renders a closed drop down 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_value"
    >
      Apple
    </div>
    <div
      aria-controls="id_listbox"
      aria-expanded="false"
      aria-labelledby="id-label id_value"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <ul
      aria-labelledby="id-label"
      class="react-combo-boxes-listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="react-combo-boxes-listbox__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        Orange
      </li>
    </ul>
  </div>
</div>
`;

exports[`options options as null renders a closed drop down with the option as an empty string 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_value"
    >
       
    </div>
    <div
      aria-controls="id_listbox"
      aria-expanded="false"
      aria-labelledby="id-label id_value"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
       
    </div>
    <ul
      aria-labelledby="id-label"
      class="react-combo-boxes-listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="react-combo-boxes-listbox__option"
        id="id_option_"
        role="option"
        tabindex="-1"
      >
        
      </li>
    </ul>
  </div>
</div>
`;

exports[`options options as undefined renders a closed drop down with the option as an empty string 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_value"
    >
       
    </div>
    <div
      aria-controls="id_listbox"
      aria-expanded="false"
      aria-labelledby="id-label id_value"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
       
    </div>
    <ul
      aria-labelledby="id-label"
      class="react-combo-boxes-listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="react-combo-boxes-listbox__option"
        id="id_option_"
        role="option"
        tabindex="-1"
      >
        
      </li>
    </ul>
  </div>
</div>
`;

exports[`options updating options updates the options 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_value"
    >
      Strawberry
    </div>
    <div
      aria-activedescendant="id_option_strawberry"
      aria-controls="id_listbox"
      aria-expanded="true"
      aria-labelledby="id-label id_value"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Strawberry
    </div>
    <ul
      aria-activedescendant="id_option_strawberry"
      aria-labelledby="id-label"
      class="react-combo-boxes-listbox"
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="react-combo-boxes-listbox__option"
        id="id_option_strawberry"
        role="option"
        tabindex="-1"
      >
        Strawberry
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_raspberry"
        role="option"
        tabindex="-1"
      >
        Raspberry
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
    </ul>
  </div>
</div>
`;

exports[`placeholder renders a placeholder option 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_value"
    >
      Please select…
    </div>
    <div
      aria-controls="id_listbox"
      aria-expanded="false"
      aria-labelledby="id-label id_value"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Please select…
    </div>
    <ul
      aria-labelledby="id-label"
      class="react-combo-boxes-listbox"
      hidden=""
      id="id_listbox"
      role="listbox"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="react-combo-boxes-listbox__option"
        id="id_option_placeholder"
        role="option"
        tabindex="-1"
      >
        Please select…
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_apple"
        role="option"
        tabindex="-1"
      >
        Apple
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_banana"
        role="option"
        tabindex="-1"
      >
        Banana
      </li>
      <li
        class="react-combo-boxes-listbox__option"
        id="id_option_orange"
        role="option"
        tabindex="-1"
      >
        Orange
      </li>
    </ul>
  </div>
</div>
`;
